# ReflexAI

./: .gitignore  .replit  README.md  alembic.ini  main.py  playwright.config.py  pyproject.toml  pytest.ini  test.db  test_selenium_basic.py
.ai/: database.md  implementation_plan.md  mvp.md  prd.md  tech_stack.md  ux_ui.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: b8961cea7de3_initial_migration.py
attached_assets/: Pasted-Krok-1-Konfiguracja-serwowania-plik-w-statycznych-i-szablonu-HTML-W-g-wnym-pliku-src-refleks-ai-m-1752644627257_1752644627258.txt  Pasted-Krok-1-Stw-rz-Schematy-Pydantic-dla-Czatu-Utw-rz-nowy-plik-src-refleks-ai-schemas-chat-schema-py--1752644250610_1752644250611.txt  Pasted-Krok-1-Stw-rz-schematy-Pydantic-dla-u-ytkownika-i-tokenu-Utw-rz-nowy-plik-src-refleks-ai-schemas-u-1752643861096_1752643861097.txt  Pasted-Krok-1-Zdefiniuj-modele-SQLAlchemy-w-katalogu-src-refleks-ai-models-W-pliku-src-refleks-ai-models-1752643093409_1752643093409.txt  Pasted-Traceback-most-recent-call-last-File-home-runner-workspace-pythonlibs-bin-alembic-line-8--1752645813731_1752645813731.txt  Pasted-Traceback-most-recent-call-last-File-home-runner-workspace-pythonlibs-bin-alembic-line-8--1752646453331_1752646453331.txt
src/refleks_ai/: dependencies.py  main.py
src/refleks_ai/database/: database.py
src/refleks_ai/models/: __init__.py  thought_diary_model.py  user_model.py
src/refleks_ai/routers/: auth_router.py  chat_router.py  diary_router.py  ui_router.py
src/refleks_ai/schemas/: __init__.py  chat_schema.py  diary_schema.py  token_schema.py  user_schema.py
src/refleks_ai/security/: hashing.py  jwt.py
src/refleks_ai/services/: ai_service.py
static/: index.html
static/css/: style.css
static/js/: main.js
templates/: diary_list_partial.html
tests/: conftest.py
tests/e2e/: test_auth_flow.py  test_chat_flow.py
tests/routers/: test_auth_router.py  test_diary_router.py
tests/security/: test_hashing.py
tests/services/: test_ai_service.py
